# social-netowork

./: .env  .gitignore  config.yml  facebook_scraper.ipynb  pyproject.toml
notebooks/: facebook_scraper.ipynb
scripts/: get_posts.py
src/social_network/: config.py  facebook_friends.py  facebook_posts.py  facebook_scraper.py  utils.py
tests/: test_facebook_friends.py  test_facebook_posts.py  test_facebook_scraper.py
