[tool.poetry]
name = "social-network"
version = "0.1.0"
description = ""
authors = ["Adam <adam.ksiezyk@gmail.com>"]
readme = "README.md"
packages = [{include = "social_network", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
bs4 = "^0.0.1"
httpx = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
